# tallerII

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main
ApplicationServer/: .travis.yml  CMakeLists.txt  Makefile  README.md
ApplicationServer/code/: CMakeLists.txt
ApplicationServer/docs/: requerimientos.txt  user_story.txt
ApplicationServer/src/: .travis.yml  ApplicationServer_config.h.in  CMakeLists.txt  main.cpp
ApplicationServer/src/mongoose/: CMakeLists.txt
SharedServer/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
SharedServer/code/: db.js  db.sql  hello.js  package.json  server.js  urls.js  views.js
SharedServer/tests/: Dockerfile  entrypoint.sh  integration.yaml  run_test.sh
app/Jobify/app/: build.gradle
app/Jobify/app/src/androidTest/java/ar/fiuba/jobify/: ApplicationTest.java
app/Jobify/app/src/main/: AndroidManifest.xml
app/Jobify/app/src/main/java/ar/fiuba/jobify/: ItemDetailActivity.java  ItemDetailFragment.java  ItemListActivity.java  MainActivity.java  PerfilFragment.java
app/Jobify/app/src/main/java/ar/fiuba/jobify/dummy/: DummyContent.java
app/Jobify/app/src/main/res/layout/: activity_item_detail.xml  activity_main.xml  fragment_perfil.xml  item_detail.xml  item_list.xml
app/Jobify/app/src/main/res/layout-w900dp/: item_list.xml
app/Jobify/app/src/main/res/values/: strings.xml
app/Jobify/app/src/test/java/ar/fiuba/jobify/: ExampleUnitTest.java
